Fixing centralize url and adding line break in js.

--- a/src/components/PokemonCard/PokemonCard.module.css
+++ b/src/components/PokemonCard/PokemonCard.module.css
@@ -33,5 +33,5 @@
 }
 
 .card-footer {
-  padding: -0.25rem 1.25rem !important;
+  padding: -0.25rem 1.25rem;
 }
